# chat-manager-aiogram

./: README.md  app.py  bot.py  config.py  funk.py  keyboard.py  misc.py  pyproject.toml
api/: __init__.py  base.py  base_client.py  msgs_handler.py  user.py
data/: reviews1.csv  reviews2.csv
handlers/: __init__.py  call_back_handler.py  general_commands.py  handler_txt.py  manager_chat.py
